fix: SERIAL column not valid — align view aliases with mapper
Root cause:
  1. View had inline SQL comments on alias lines (e.g. AS SERIAL_NO, -- comment)
     causing the parser to treat 'SERIAL_NO,' as part of the alias name
  2. Mapper read 'SERIAL' but view alias was 'SERIAL_NO'
  3. Mapper read 'QTY_STOCK_UNIT' which was never in the view

View (XTMSDLVY_LINES_TMS_view.sql):
  - Removed ALL inline comments from SELECT alias lines
  - Clean aliases: DOCNUM, LINE_NUM, CPYCODE, SITE, ITEM_CODE,
    ITEM_DESC1, ITEM_DESC2, QTY_ORDERED, QTY_DELIVERED, STOCK_UNIT,
    PACK_UNIT, PACK_NUM, NET_WEIGHT, GROSS_WEIGHT, VOLUME,
    WEIGHT_UNIT, VOLUME_UNIT, LOT, SERIAL_NO, LINE_STATUS

Mapper (StopProductRepository):
  - SERIAL  → SERIAL_NO  (matches view alias)
  - Removed QTY_STOCK_UNIT read (not in view)
  - Used Collections.nCopies for cleaner IN placeholder generation
  - Used Collections.emptyList() for empty input guard

DTO (StopProductDTO):
  - Removed qtyStockUnit field (not selected from view)